@@ -1,3 +1,8 @@
+2013-11-29  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/57574
+	* gcc.dg/inline-35.c: New test.
+
 2013-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/59297
