@@ -1,3 +1,9 @@
+2013-11-29  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/57574
+	* c-decl.c (merge_decls): Clear DECL_EXTERNAL for a definition of
+	an inline function following a static declaration.
+
 2013-11-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/59310
